[package]
name = "adventofcode-2023"
version = "0.1.0"
authors = ["Emil Lundberg <emil@emlun.se>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
